apps/todo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: todo
  name: todo
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: todo
    spec:
      containers:
        - image: prologic/todo
          name: todo
          ports:
            - containerPort: 8000
          resources: {}
status: {}
