apps/todo/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: todo
  name: todo
  namespace: default
spec:
  ports:
    - name: 8000
      port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: todo
  type: ClusterIP
status:
  loadBalancer: {}
